Fix menu and scrollbar overlap

--- a/main.css
+++ b/main.css
@@ -630,10 +630,6 @@ h3 {
   }
 }
 
-.menu {
-  z-index: 10;
-}
-
 .menu__button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -652,7 +648,7 @@ h3 {
   height: 25px;
   position: fixed;
   top: 1rem;
-  right: 1rem;
+  left: 1rem;
   z-index: 11;
   cursor: pointer;
 }
@@ -713,10 +709,11 @@ h3 {
   padding: 5rem 2rem;
   position: fixed;
   top: 0;
-  right: 0;
+  left: 0;
   background-color: #000000ec;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  z-index: 10;
 }
 
 .menu__list--open {
